--- a/css/global.css
+++ b/css/global.css
@@ -7,3 +7,7 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1rem;
 }
+.nav__li-link {
+    text-decoration: none;
+    color: black;
+}
