--- a/css/main.css
+++ b/css/main.css
@@ -1,35 +1,40 @@
 .nav__container {
     display: flex;
-    padding: 0rem 4rem;
+    padding: 0rem;
+    margin: 0rem;
     background-color: #ffffff;
+    position: fixed;
+    width: 100%;
+    top 0;
 }
 .nav__ul {
-    
-    padding: 0 rem 3rem;
+    gap: 1rem;
     
 }
 ul > li {
     margin: 0rem 0.5rem;
 }
 .section__image {
-    height: 13rem;
+    height: 18rem;
     padding: 4rem;
 }
 .nav__div {
     width: 100%;
-    padding-left: 5%;
+    
+    display: flex;
+    justify-content: space-between;
 }
 .section__hero {
     display: flex;
-    align-items: center;
+    justify-content: space-between;
     width: 100%;
-    flex-direction: row;
-    padding: 2rem;
+    
     background-color: #FEFAF5;
 }
 .section__div {
-    padding: 1rem 3rem 5rem 3rem;
+    padding: 4.5rem;
     text-align: left;
+    
 }
 .section__button {
     height: 1.5rem;
@@ -55,11 +60,13 @@ ul > li {
 .main {
     
     width: 100%;
-    margin: 0rem 3rem;
+    
+    
+    
 }
 .main__card {
     
-    padding: 20px;
+    padding: 1rem;
     display: flex;
     position: relative;
     text-align: center;
@@ -71,14 +78,14 @@ ul > li {
     width: 100%;
     height: 20px;
     background-color: white;
-    padding-left: 3rem;
+    padding-left: 2rem;
     color: #335576;
 }
 .main__div {
-    display: inline-flex;
-    margin: 0%;
-    padding-left: 10%;
-    position: absolute;
+    display: flex;
+    justify-content: center;
+
+
 }
 .main__p {
     background-color: transparent;
@@ -89,5 +96,4 @@ ul > li {
     height: 30px;
     bottom: 4px;
     right: 16px
-    
 }
