--- a/css/global.css
+++ b/css/global.css
@@ -1,13 +1,34 @@
-ul {
-    list-style-type: none;
+.nav__container {
     display: flex;
-    justify-content: flex-end; 
-} 
-body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1rem;
+    padding: 0rem;
+    margin: 0rem;
+    background-color: #ffffff;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 3;
 }
-.nav__li-link {
-    text-decoration: none;
-    color: black;
+.nav__ul {
+    display: flex;
+    position: absolute;
+    gap: 1rem;
+    right: 0;
+    padding-right: 3.5rem;
+}
+ul > li {
+    margin: 0rem 0.5rem;
+}
+.nav__div {
+    width: 100%;
+    padding: 0rem 5rem 0rem 5rem;
+    justify-content: space-between;
+}
+.nav__title {
+    width: 97px;
+}
+.nav__home {
+    border-bottom: solid 5px;
+    padding-bottom: 4px;
+    border-color: #DB7A4E;
 }
