--- a/css/global.css
+++ b/css/global.css
@@ -16,8 +16,11 @@
     right: 0;
     padding-right: 3.5rem;
 }
-ul > li {
-    margin: 0rem 0.5rem;
+.nav__li {
+    margin: 0rem 0rem;
+    color: black;
+    list-style-type: none;
+    
 }
 .nav__div {
     width: 100%;
@@ -26,9 +29,100 @@ ul > li {
 }
 .nav__title {
     width: 97px;
+    color: #335576;
 }
 .nav__home {
     border-bottom: solid 5px;
     padding-bottom: 4px;
     border-color: #DB7A4E;
+}
+.nav__li-link {
+    text-decoration: none;
+}
+
+.footer {
+    background-color: #fefaf5;
+    padding: 0rem;
+    display: flex;
+}
+.footer__section {
+    align-content: space-around;
+    margin: 0rem;
+}
+.section__ul {
+    text-align: center;
+    line-height: 0;
+}
+.section__li {
+    display: inline-block;
+    padding-left: 0rem;
+    vertical-align: top;
+}
+.section__ul li:nth-child(2) {
+    padding-left: 7rem;
+}
+.section__ul li:nth-child(3) {
+    padding-left: 7rem;
+    padding-bottom: 1rem;
+}
+.section__subtext {
+    color: #DB7A4E;
+    font-size: 12;
+    margin: 0rem;
+    padding-right: 2rem;
+}
+.li__subdiv {
+    display: flex;
+}
+.li__img {
+    width: 25px;
+    height: 25px;
+    padding: 1.3rem 0.8rem;
+}
+.ul__li-email {
+    padding-right: 2.8rem;
+    margin: 2rem 0rem 0rem 0rem;
+    color: #DB7A4E;
+}
+.ul__li-info {
+    color: #335576;
+    margin: 1.4rem 0rem 1rem 3rem;
+}
+.ul__li-hour {
+    margin-right: 18rem;
+    color: #335576;
+    padding-right: 5rem;
+}
+.ul__li-contact {
+    color: #335576;
+}
+.section__ul li:nth-child(2) {
+    padding-right: 0rem;
+}
+.li__div-weekday p:nth-child(2){
+    margin: 1.4rem 0.8rem 0rem 0rem;
+    color: #335576;
+}
+.li__div-saturday p:nth-child(1) {
+    margin-right: 1rem;
+}
+.li__div-saturday p:nth-child(2) {
+    margin: 1.4rem 0rem 0rem 1rem;
+    color: #335576;
+}
+.li__div-sunday p:nth-child(1) {
+    padding: 0rem 0rem 0rem 2.3rem;
+}
+.li__div-sunday p:nth-child(2) {
+    padding: 0.4rem 0rem 0rem 0rem;
+    color: #335576;
+}
+.li__h2-social {
+    color: #335576;
+    margin-right: 1rem;
+    padding-right: 5rem;
+}
+.li__div-img {
+    margin-right: 1.5rem;
+    padding-right: 0rem;
 }
