--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,6 @@
     top: 0;
     left: 0;
     z-index: 3;
-    
 }
 .nav__ul {
     display: flex;
@@ -16,10 +15,10 @@
     gap: 1rem;
     right: 0;
     padding-right: 3.5rem;
-    
 }
 ul > li {
     margin: 0rem 0.5rem;
+    
 }
 .section__image {
     height: 18rem;
@@ -89,100 +88,14 @@ ul > li {
 .main__p {
     background-color: transparent;
     color: white;
-    
+    z-index: 4;
     padding-right: 20px;
     position: absolute;
     height: 30px;
     bottom: 4px;
     right: 16px
 }
-.nav__title {
-    width: 97px;
-}
-.section__h2 {
-    display: inline-flex;
-    width: 100%;
-    
-    justify-content: space-between;
-}
-.section__h2 h2:nth-child(2) {
-    margin-right: 20rem;
-}
-.footer {
-    
-    padding: 4rem;
-    width: 100%;
-    background-color: #FEFAF5;
-}
-.section__h2 h2:nth-child(2) {
-    padding-right: 17rem;
-}
-.section__h2 h2:nth-child(3) {
-    margin-right: 13rem;
-}
-.section__subtext {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    font-size: 0.7rem;
-}
-.section__subtext p:nth-child(4) {
-    padding-right: 28rem;
-}
-.section__subtext p:nth-child(3) {
-    padding-right: 8rem;
-    margin-left: 2rem;
-    
-}
-.section__subtext p:nth-child(2) {
-    margin: 0.5rem 2rem 0rem 11rem;
-    
-    padding: 0rem 0rem 0rem 0rem;
-    height: 20px;
-}
-.section__info {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    font-size: 1.0rem;
-}
-.section__info p:nth-child(2) {
-    margin-left: 2rem;
-    
-    padding-left: 1.5rem;
-}
 
-.section__div-footer h2 {
-    display: inline-flex;
-    width: 100%;
-    
-    justify-content: space-between;
-}
-.section__div-center {
-    display: flex;
-    justify-content: center;
-    width: 106px;
-}
-.section__info p:nth-child(4) {
-    padding-right: 20rem;
-    margin-right: 8rem; 
-}
-.section__info-4th {
-    text-align: center;
-    width: 50px;
-}
-.footer__subsection {
-    display: flex;
-}
-.footer__3rdsection {
-    display: flex;
-    justify-content: space-around;
-    width: 170px;
-}
-.section__icon {
-    height: 30px;
-    width: 30px;
-}
-.section__9to5 {
-width: 160px;
-}
+
+
+
